# openai_compatiable_demo

./: .gitignore  LICENSE  README.md  README_zh.md  config.toml.example  pyproject.toml
tj/resources/avatars/: create_avatars.py
tj/scripts/: config.py  main.py  ui.py
tj/scripts/api/: base.py  openai.py
tj/scripts/models/: chat.py
tj/scripts/utils/: logger.py
