[project]
name = "openai-compatiable-demo"
version = "0.1.0"
description = "OpenAI API 兼容性演示项目"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tomli>=2.0.1",
    "aiohttp>=3.9.1",
    "typing-extensions>=4.9.0",  # 用于更好的类型提示支持
    "gradio>=4.19.2",  # 添加 Gradio 依赖
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[project.urls]
Homepage = "https://github.com/tj-scripts/openai_compatiable_demo"
Repository = "https://github.com/tj-scripts/openai_compatiable_demo.git"
Issues = "https://github.com/tj-scripts/openai_compatiable_demo/issues"

[[project.authors]]
name = "tj-scripts"
email = "tangj1984@gmail.com"

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tj/scripts"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
